<resources>
    <string name="app_name">Mastermind</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- PREFERENCES -->
    <string name="gameCategory_title">GAME</string>
    <string name="colorblindMode_title">Colorblind mode</string>
    <string name="playerName">Player name</string>
    <string name="playerName_defaultValue">Player</string>
    <string name="language_title">Language</string>
    <string-array name="prefLanguage_entries" translatable="false">
        <item>Español</item>
        <item>English</item>
    </string-array>

    <string name="prefLanguage_defaultValue" translatable="false">Español</string>
    <string name="english_value" translatable="false">English</string>
    <string name="colorblindMode_defaultValue" translatable="false">false</string>
    <string name="firstSessionKey" translatable="false">firstSession</string>
    <string name="key_currentIdUser" translatable="false">currentIdUser</string>
    <string name="key_optionUser" translatable="false">optionUser</string>

    <string name="txt_start">Tap to start</string>
    <string name="txt_play">Tap to play</string>

    <string name="txt_instructions">Instructions</string>
    <string name="txt_settings">Settings</string>

    <string name="txt_singleplayer">Singleplayer</string>
    <string name="txt_multiplayer" translatable="false">Vs IA</string>

    <string name="txtEasy">Easy</string>
    <string name="txtMedium">Medium</string>
    <string name="txtHard">Hard</string>

    <string name="selectModeGame">Select game mode</string>

    <string name="lblround">ROUND</string>
    <string name="lblSelectColor">Select a color</string>
    <string name="lblFill">Fill the combination</string>
    <string name="youWin">¡You win %s!</string>
    <string name="youLose">You lose %s…</string>
    <string name="nameIA">IA</string>
    <string name="quitGame">Quit game?</string>
    <string name="msgQuitGame">Are you sure you want to quit the game?</string>
    <string name="txtYes">YES</string>
    <string name="txtNo">NO</string>
    <string name="txtGoHome">Go home</string>
    <string name="n_games">Total games: %s</string>
    <string name="n_games_win">Games won: %s</string>
    <string name="n_games_lose">Lost games: %s</string>
    <string name="user_profile">Player profile</string>
    <string name="namePlayer">Player\'s name: %s</string>
    <string name="manage_users">Manage players</string>
    <string name="goBack">Go back</string>
    <string name="change_user">Change player</string>
    <string name="title_delete_player">Delete player</string>
    <string name="title_edit_player">Edit player</string>
    <string name="title_change_player">Change to…</string>
    <string name="msg_removed_player">You have removed %s</string>
    <string name="msg_only_player">You cannot delete the only player</string>
    <string name="btn_add">Add</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_write_name">Write a name for player</string>
    <string name="btn_edit">Edit</string>
    <string name="hint_enter_the_name_here">Enter the name here</string>
    <string name="press_to_exit">Press again to exit</string>
    <string name="msg_player_exist">This name player exists, try again</string>
    <string name="msg_inserted">The player %s has been successfully inserted</string>
    <string name="msg_create_player">You must first create a player</string>
    <string name="msg_edited">A player has been edited: %s -> %s</string>
    <string name="msg_askRemove">Do you want remove %s?</string>
    <string name="msg_empty_name">You can\'t introduce a empty name</string>
    <string name="msg_requiredName">\nIt must be between 3–10 characters. Only characters a–z, 0–9 and _ are allowed</string>

</resources>
