<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.menu.selectModeGame.ModeGame">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bgmenu"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn_back"
            android:background="@drawable/ic_home_black_24dp"
            android:backgroundTint="@color/white"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectModeGame"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="28sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="30dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btn_left01" />

        <Button
            android:id="@+id/btn_left01"
            android:background="@drawable/ic_back"
            android:backgroundTint="@color/white"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/btnSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_singleplayer"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintTop_toTopOf="@id/btn_left01"
            app:layout_constraintBottom_toBottomOf="@id/btn_left01"
            app:layout_constraintLeft_toRightOf="@id/btn_left01"
            app:layout_constraintRight_toLeftOf="@id/btn_right01"/>

        <TextView
            android:id="@+id/btnMulti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_multiplayer"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintTop_toTopOf="@id/btn_left01"
            app:layout_constraintBottom_toBottomOf="@id/btn_left01"
            app:layout_constraintLeft_toRightOf="@id/btn_left01"
            app:layout_constraintRight_toLeftOf="@id/btn_right01"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btn_right01"
            android:background="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:backgroundTint="@color/white"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <Button
            android:id="@+id/btn_left02"
            android:background="@drawable/ic_back"
            android:backgroundTint="@color/white"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_left01"/>

        <TextView
            android:id="@+id/btnEasy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtEasy"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintTop_toTopOf="@id/btn_left02"
            app:layout_constraintBottom_toBottomOf="@id/btn_left02"
            app:layout_constraintLeft_toRightOf="@id/btn_left02"
            app:layout_constraintRight_toLeftOf="@id/btn_right02"/>
        <TextView
            android:id="@+id/btnNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtMedium"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintTop_toTopOf="@id/btn_left02"
            app:layout_constraintBottom_toBottomOf="@id/btn_left02"
            app:layout_constraintLeft_toRightOf="@id/btn_left02"
            app:layout_constraintRight_toLeftOf="@id/btn_right02"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/btnHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtHard"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintTop_toTopOf="@id/btn_left02"
            app:layout_constraintBottom_toBottomOf="@id/btn_left02"
            app:layout_constraintLeft_toRightOf="@id/btn_left02"
            app:layout_constraintRight_toLeftOf="@id/btn_right02"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btn_right02"
            android:background="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:backgroundTint="@color/white"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_right01"/>

        <TextView
            android:id="@+id/btnPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_start"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginBottom="150dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
