<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.menu.selectModeGame.difficultGame.DifficultGameSelect">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bgmenu"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>


    <Button android:id="@+id/btn_back"
            android:background="@drawable/ic_back"
            android:backgroundTint="@color/white"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectDifficulty"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="32sp"
        android:padding="20dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_back"/>

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtEasy"
        android:background="@drawable/btn_border_1"
        android:textColor="@drawable/btn_color"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/title"/>
    <Button
        android:id="@+id/btnNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtMedium"
        android:background="@drawable/btn_border_2"
        android:textColor="@drawable/btn_color"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnEasy"/>
    <Button
        android:id="@+id/btnHard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtHard"
        android:background="@drawable/btn_border_3"
        android:textColor="@drawable/btn_color"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnNormal"/>
</androidx.constraintlayout.widget.ConstraintLayout>

